# flashcard_app

./: CMakeLists.txt  main.cpp  readme.md  try.json
